fix logo in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,10 @@
   --ifm-code-font-size: 95%;
 }
 
+html[data-theme="dark"] .navbar__brand > img {
+  filter: invert(1);
+}
+
 /* By default, the dark/light mode switch is only available
 in the desktop view. */
 .navbar__items--right > div {
